--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,7 +19,7 @@ body{
 }
 
 div{
-	transition:opacity .5s ease-out 0.5s;
+	transition:opacity .5s linear 0.5s;
 }
 .Container{
 	position: absolute;
@@ -34,16 +34,40 @@ div{
   	flex-direction:column;
   	align-items: center;
   	justify-content: center;
-  	
+  	overflow: hidden;
 
 }
 .Row{
 	width:auto;	
 }
+.Row:nth-child(2){
+	transition:opacity .8s linear 0.8s;
+}
+.Row:nth-child(3){
+	transition:opacity 1.1s linear 1.1s;
+}
+.Row:nth-child(4){
+	transition:opacity 1.4s linear 1.4s;
+}
+.Row:nth-child(5){
+	transition:opacity 1.7s linear 1.7s;
+}
+#_btn_start{
+	transition:opacity .4s linear 2s;
+}
+
+
 .Button{
 	cursor: pointer;
 	z-index: 20;
+	opacity: 1;
+	transition:opacity .5s linear;
 }
+.Button.Disable{
+	opacity: .5;
+	cursor: none;
+}
+
 .hidden{
 	/*display: none !important;*/
 	opacity: 0;
@@ -55,45 +79,53 @@ div{
 
 #_btn_home{
 	position: absolute;
-	top:77px;
-	left:75px;
+	top:74px;
+	left:77px;
 	z-index: 10;
+	transition:opacity .3s linear;
 }
+#_btn_home.Disable{
+	opacity: 0;
+}
+
 .CloudWrapper{
 	display: flex;
   	flex-direction:column;
   	align-items: center;
 }
-.CloudWrapper.Big{
+.CloudWrapper.Record{
 	height:304px;	
 }
-.CloudWrapper.Small{
+.CloudWrapper.Title{
 	height:115px;	
+}
+.CloudWrapper.Finish{
+	height:200px;	
 }
 .CloudWrapper>img{
 	position: absolute;
 }
 .TextInput{
 
-	width:1247px;
-	height:139px;
-	border-radius:80px;
+	width:998px;
+	height:111px;
+	border-radius:42px;
 	border:none;
-	padding:100px;
+	padding:20px;
 
 
 	font-family: custom-font;
-	font-size:96px;
+	font-size:76px;
 	color:#007B95;
 	text-align: center;
 
 
 }
 .QRcodeWrapper{
-	width:540px;
-	height:540px;
+	width:433px;
+	height:433px;
 	
-	border-radius:66px;
+	border-radius:52px;
 	border:none;
 
 	display: flex;
@@ -103,9 +135,9 @@ div{
 	background-color: white;
 }
 .QRcode{
-	margin-top:91px;
-	width:358px;
-	height:358px;
+	margin-top:73px;
+	width:287px;
+	height:287px;
 	background-color:#FF3264;
 }
 
@@ -116,4 +148,14 @@ div{
 	bottom:0;
 	right:0;
 	z-index: -10;
+}
+
+.ErrorHint{
+	color:#FCD697;
+	font-family: custom-font;
+	font-size:30px;
+	text-align: center;
+	white-space: pre-wrap;
+	
+	transition: .2s linear;
 }
