--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,7 @@ div{
 	position: absolute;
 	width:100%;
 	top:0;
-	bottom:0;
+	/*bottom:0;*/
 
 	padding: 0;
   	margin: 0;
@@ -34,7 +34,7 @@ div{
   	flex-direction:column;
   	align-items: center;
   	justify-content: center;
-  	overflow: hidden;
+  	/*overflow: hidden;*/
 
 }
 .Row{
@@ -158,4 +158,8 @@ div{
 	white-space: pre-wrap;
 	
 	transition: .2s linear;
+}
+
+#_button_record{
+	transition-delay: 0s;
 }
